# dingtalk-sdk

./: .gitignore  DingTalk.hs  dingtalk-sdk.cabal
DingTalk/: Helpers.hs  JS.hs  Misc.hs  Types.hs  Yesod.hs
DingTalk/ECO/: Basic.hs
DingTalk/ECO/Message/: CorpConversation.hs  Types.hs
DingTalk/OAPI/: Attendance.hs  Basic.hs  Callback.hs  Contacts.hs  Crypto.hs  ErrorCode.hs  Media.hs  Process.hs  Report.hs  SNS.hs
DingTalk/OAPI/Message/: Chat.hs  CorpConversation.hs  Types.hs
DingTalk/VxAPI/: Basic.hs  ErrorCode.hs  Process.hs
src/: DingTalk.hs
src/DingTalk/: Helpers.hs  JS.hs  Misc.hs  Types.hs
src/DingTalk/OAPI/: Crypto.hs  Process.hs  SNS.hs
src/DingTalk/OAPI/Message/: Types.hs
src/DingTalk/VxAPI/: Basic.hs  Drive.hs  ErrorCode.hs  Process.hs
test/DingTalk/: MiscSpec.hs
test/DingTalk/OAPI/: CryptoSpec.hs
tools/: manage.hs
