name:                dingtalk-sdk
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Gilbert Fine
maintainer:          gilbert.fine@gmail.com
category:            DingTalk
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

Flag dev
    Description:   Turn on development settings, like disable optimization.
    Default:       True

Flag library-only
    Description:   Build for library only
    Default:       False

library
  hs-source-dirs:      .
  exposed-modules:     DingTalk.Types
                       DingTalk.OAPI.Basic
                       DingTalk.OAPI.Crypto
                       DingTalk.OAPI.Media
                       DingTalk.ECO.Basic
                       DingTalk.ECO.Message.Types
                       DingTalk.ECO.Message.CorpConversation
                       DingTalk

  build-depends:       base >= 4.7 && < 5
                     , classy-prelude
                     , text
                     , aeson
                     , shakespeare
                     , blaze-html
                     , persistent
                     , wreq
                     , monad-logger
                     , transformers
                     , mtl
                     , lens
                     , bytestring
                     , base64-bytestring
                     , base16-bytestring
                     , random
                     , cryptohash
                     , HTTP
                     , http-client
                     , mime-types
                     , time
                     , parsec-tx-utils >= 0.3
                     , persistent-tx-utils >= 0.1
                     , yesod-helpers

  default-language:    Haskell2010

  default-extensions: TemplateHaskell
                      QuasiQuotes
                      OverloadedStrings
                      NoImplicitPrelude
                      CPP
                      MultiParamTypeClasses
                      TypeFamilies
                      GADTs
                      GeneralizedNewtypeDeriving
                      FlexibleContexts
                      FlexibleInstances
                      EmptyDataDecls
                      NoMonomorphismRestriction
                      DeriveDataTypeable
                      ConstraintKinds
                      DeriveGeneric
                      RankNTypes
                      FunctionalDependencies
                      PartialTypeSignatures

  ghc-options:  -Wall -fno-warn-partial-type-signatures

  if flag(dev)
      cpp-options:   -DDEVELOPMENT
      ghc-options:   -O0 +RTS -A128m -n2m -RTS
  else
      ghc-options:   -O


executable dingtalk-manage
  if flag(library-only)
      Buildable: False

  main-is:             manage.hs
  hs-source-dirs:      tools
  build-depends:       classy-prelude
                     , base
                     , dingtalk-sdk
                     , optparse-applicative
                     , monad-logger
                     , fast-logger
                     , http-client
                     , wreq
                     , lens
                     , bytestring
                     , parsec-tx-utils

  default-language:    Haskell2010

  default-extensions: TemplateHaskell
                      QuasiQuotes
                      OverloadedStrings
                      NoImplicitPrelude
                      CPP

test-suite dingtalk-sdk-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , classy-prelude
                     , classy-prelude-yesod
                     , dingtalk-sdk
                     , hspec
                     , QuickCheck
                     , time
                     , persistent
                     , persistent-tx-utils

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

  default-extensions: NoImplicitPrelude
                      OverloadedStrings
                      ScopedTypeVariables
