name:                dingtalk-sdk
version:             0.2.4.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Gilbert Fine
maintainer:          gilbert.fine@gmail.com
category:            DingTalk
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

Flag dev
    Description:   Turn on development settings, like disable optimization.
    Default:       True

Flag library-only
    Description:   Build for library only
    Default:       False

library
  hs-source-dirs:      .
  exposed-modules:     DingTalk.Types
                       DingTalk.Helpers
                       DingTalk.OAPI.Basic
                       DingTalk.OAPI.Callback
                       DingTalk.OAPI.Contacts
                       DingTalk.OAPI.SNS
                       DingTalk.OAPI.Crypto
                       DingTalk.OAPI.Media
                       DingTalk.OAPI.Message.Types
                       DingTalk.OAPI.Message.Chat
                       DingTalk.OAPI.Message.CorpConversation
                       DingTalk.OAPI.Process
                       DingTalk.OAPI.Attendance
                       DingTalk.OAPI.ErrorCode
                       DingTalk.JS
                       DingTalk.Yesod
                       DingTalk.Misc
                       DingTalk

  build-depends:       base >= 4.7 && < 5
                     , classy-prelude
                     , classy-prelude-yesod
                     , yesod-core
                     , wai
                     , text
                     , containers
                     , aeson
                     , aeson-extra
                     , aeson-pretty
                     , shakespeare
                     , blaze-html
                     , persistent
                     , wreq
                     , monad-logger
                     , transformers
                     , monad-control
                     , mtl
                     , lens
                     , lens-aeson
                     , bytestring
                     , base64-bytestring
                     , base16-bytestring
                     , conduit
                     , random
                     , HTTP
                     , http-client
                     , http-types
                     , mime-types
                     , binary
                     , time
                     , hedis
                     , unicode-show
                     , cryptonite
                     , clock
                     , lifted-base
                     , yesod


  default-language:    Haskell2010

  default-extensions: TemplateHaskell
                      QuasiQuotes
                      OverloadedStrings
                      NoImplicitPrelude
                      CPP
                      MultiParamTypeClasses
                      TypeFamilies
                      GADTs
                      GeneralizedNewtypeDeriving
                      FlexibleContexts
                      FlexibleInstances
                      EmptyDataDecls
                      NoMonomorphismRestriction
                      DeriveDataTypeable
                      ConstraintKinds
                      DeriveGeneric
                      RankNTypes
                      FunctionalDependencies
                      PartialTypeSignatures
                      DataKinds
                      TupleSections
                      RecordWildCards

  ghc-options:  -Wall -fwarn-tabs -fno-warn-partial-type-signatures -j

  if flag(dev)
      cpp-options:   -DDEVELOPMENT
      -- ghc-options:   -O0 +RTS -A128m -n2m -RTS
      -- haddock 目前不支付解释RTS选项，等haddock新版直接过滤掉RTS选项后就可以用以上选项
      -- see: haddock issue #725
  else
      ghc-options:   -O


executable dingtalk-manage
  if flag(library-only)
      Buildable: False

  main-is:             manage.hs
  hs-source-dirs:      tools
  build-depends:       classy-prelude
                     , base
                     , dingtalk-sdk
                     , optparse-applicative
                     , monad-logger
                     , fast-logger
                     , http-client
                     , wreq
                     , lens
                     , bytestring
                     , transformers
                     , monad-control
                     , conduit
                     , aeson-pretty
                     , time
                     , text
                     , containers
                     , yesod
                     , unicode-show

  default-language:    Haskell2010

  default-extensions: TemplateHaskell
                      QuasiQuotes
                      OverloadedStrings
                      NoImplicitPrelude
                      CPP
                      RecordWildCards
                      FlexibleContexts

test-suite dingtalk-sdk-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       DingTalk.OAPI.CryptoSpec
                       DingTalk.MiscSpec

  build-depends:       base
                     , classy-prelude
                     , classy-prelude-yesod
                     , dingtalk-sdk
                     , hspec
                     , QuickCheck
                     , time
                     , persistent

  ghc-options:         -Wall -fwarn-tabs -fno-warn-partial-type-signatures -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

  default-extensions: NoImplicitPrelude
                      OverloadedStrings
                      ScopedTypeVariables
                      CPP
